--- a/css/media.css
+++ b/css/media.css
@@ -34,5 +34,57 @@
 }
 
 @media screen and (max-width:320px) {
-    
+     .nav__menu {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .desc__item-p,
+    .desc__design-p,
+    .collection__cards-item-h,
+    .collection__cards-item-p {
+        font-size: 12px;
+    }
+
+    .banner__title {
+        font-size: 30px;
+    }
+
+    .nav__menu-link,
+    .banner__button {
+        font-size: 14px;
+    }
+
+    .banner {
+        background: url(../img/banner.png) no-repeat center/cover;
+        height: 40vh;
+    }
+
+    .desc__item, 
+    .desc__item-2,
+    .desc__design {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .desc__item-img1,
+    .desc__item-img2 {
+        max-width: 290px;
+        width: 100%;
+    }
+
+    .desc__item-img3 {
+        height: 40vh;
+    }
+
+    .collection__cards{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .footer__pay {
+        display: flex;
+        flex-direction: column;
+    }
 }
